qa/zeppelin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeppelin-server
spec:
  template:
    spec:
      containers:
        - name: zeppelin-server
          image: chusj/zeppelin:7508c20ef44952f1ee2af91a26822b6efc10998f
