qa/zeppelin/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notebook-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: notebook-basic-auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
      - notebook.qa.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: notebook.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: zeppelin-server
            servicePort: 80
